# IOTMP-Zephyr

./: .gitignore  CMakeLists.txt  Kconfig  LICENSE  README.md  west.yml
.github/workflows/: build.yml
include/thinger/iotmp/: client.hpp
samples/basic/: CMakeLists.txt  prj.conf
samples/basic/src/: main.cpp
src/: iotmp_client.cpp
zephyr/: module.yml
